2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix two spurious failures on Solaris make
	* tests/tests-environment-and-log-compiler.test: Do not fail if
	"make -n check" fails, as that is issued only for debugging, its
	semantics being tested in other test scripts.
	* tests/test-driver-strip-vpath.test: Likewise.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap driver: refactor and remove dead code
	* lib/tap-driver (get_tap_line): Removed, ...
	(all callers): ... updated to use $parser->next directly instead.
	(peek_tap_line, unget_tap_line, @tap_lines): Remove, they're not
	used anymore.
	(TAP_PEEKING): Block deleted, all its subroutines and variables
	having been removed.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	testsuite: fix spurious failure in a test on TAP support
	* tests/tap-passthrough-exit.test: When the `--ignore-exit' flag
	of the TAP driver is used, don't look for a message reporting the
	non-zero exit statuses of tests in the log files; such message is
	not expected to be there anymore.  Related simplifications.

2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tap: plan location is more liberal w.r.t. non-TAP lines
	With this change, only lines that are TAP results will matter
	w.r.t. the position of the TAP plan in the input; for example,
	this input:
	  this is a non-TAP line
	  # and this a TAP diagnostic line
	  1..1
	  ok 1
	was considered to be an error, diagnosed with a message "test
	plan in middle of output"; as effect of the current change, such
	input is now valid.  This is more consistent with the behaviour
	of the `prove' utility.
	* lib/tap-driver ($lineno): Removed, no more needed.
	($tap_stopped): New global variable.
	(stringify_test_result): Return "ERROR" if a TAP result is found
	when `$tap_stopped' is set to true.
	(handle_tap_test): Diagnose TAP results that comes after a late
	plan.  Add a couple of blank lines, for clarity.