@@ -1,5 +1,12 @@
 2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	testsuite: fix another spurious failure on Solaris make
+	* tests/parallel-tests-log-override-recheck.test: Filter make
+	output before grepping it, for make implementations that, like
+	Solaris' one, print the whole of the failed recipe on failure.
+
+2011-08-07  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	testsuite: fix two spurious failures on Solaris make
 	* tests/tests-environment-and-log-compiler.test: Do not fail if
 	"make -n check" fails, as that is issued only for debugging, its
